Clean-up. Extracted from a patch by Jeremy Boynes.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1501304 13f79535-47bb-0310-9956-ffa450edef68